--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.5",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.7.0",
     "eslint-config-unobtrusive": "^1.2.2",
     "eslint-plugin-jest": "^21.25.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.4"
   },
   "config": {
